# app_base

./: .gitignore  CMakeLists.txt  README.md  cb.sh  chk.sh  prerequisite_SDL2.sh  r.sh  tt.sh
cmake/: 020_SDL2_support.cmake  051_imgui.cmake
docs/: architecture.md  basic_requirements.md  interview_log.md  requirements.md  test_strategy.md
include/: App.h  Log_Util.h  libmodule.h
libsrc/: .App.cpp.swp  .SceneDef.h.swp  App.cpp  CBase.cpp  CBase.h  SDL2_Ctx.cpp  SDL2_Ctx.h  SceneDef.h  libmodule.cpp  main_entry.cpp  main_entry.h
libsrc/scenes/: .ECSUtil.h.swp  .Scene_Play.cpp.swp  ECSUtil.h  SceneMap.cpp  SceneMap.h  SceneUtil.cpp  SceneUtil.h  Scene_End.cpp  Scene_End.h  Scene_MainMenu.cpp  Scene_MainMenu.h  Scene_Option.cpp  Scene_Option.h  Scene_Play.cpp  Scene_Play.h  Scene_Scenarios.cpp  Scene_Scenarios.h  Scene_Title.cpp  Scene_Title.h
reports/: audit_report.md  build_report.md  failure_summary.md  process_timeline.md  run_report.md  test_report.md
src/: main.cpp
test/: test_main.cpp  testcase_00.cpp  testcase_01_runtime.cpp  testcase_02_gui_static.cpp
