CMAKE_MINIMUM_REQUIRED ( VERSION 3.11 )

SET ( CMAKE_C_COMPILER "gcc" )
SET ( CMAKE_CXX_COMPILER "g++" )

PROJECT ( app_base )

SET ( PROJECT_VERSION_MAJOR 1)
SET ( PROJECT_VERSION_MINOR 0)

if(NOT CMAKE_BUILD_TYPE)
  SET ( CMAKE_BUILD_TYPE Debug )
endif()

SET ( CMAKE_VERBOSE_MAKEFILE true )

SET ( OUTPUT_ELF
  "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out"
  )

# For extension of cmake file
# you can add *.cmake file, under ./cmake/ directory
FILE( GLOB INCLUDE_CMAKE_FILES cmake/*.cmake)
FOREACH( FILE ${INCLUDE_CMAKE_FILES})
  include( ${FILE})
ENDFOREACH()

SET ( INCLUDE_DIR
        ${INCLUDE_DIR}
        include
        libsrc
        libsrc/scenes
        )

# Sources for library build
FILE( GLOB GLOB_LIBSRC_FILES libsrc/*.cpp)
FILE( GLOB GLOB_SCENE_FILES  libsrc/scenes/*.cpp)
SET(LIBSRC_FILES ${LIBSRC_FILES} ${GLOB_LIBSRC_FILES} ${GLOB_SCENE_FILES})

# sources for exec
FILE( GLOB GLOB_SRC_FILES src/*.cpp)
SET(SRC_FILES ${SRC_FILES} ${GLOB_SRC_FILES})

# sources for testing
FILE( GLOB GLOB_TEST_FILES test/*.cpp)
SET(TEST_FILES ${TEST_FILES} ${GLOB_TEST_FILES})

find_package(Threads REQUIRED)

# common compile options
ADD_COMPILE_OPTIONS ( -Wall 
                    # -Werror
                       )
# Link library lists (-l)
SET ( LIBRARY_LISTS ${LIBRARY_LISTS} 
# add the libraries what you want
# ex) SDL2,  Qt5::Widgets ...
    )

# "Debug" 형상 한정 컴파일 옵션, 링크 옵션
SET ( CMAKE_C_FLAGS_DEBUG   "-O0 -g3" )
SET ( CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -std=gnu++17" )
SET ( CMAKE_EXE_LINKER_FLAGS_DEBUG "" )

# "Release" 형상 한정 컴파일 옵션, 링크 옵션
SET ( CMAKE_C_FLAGS_RELEASE "-O2" )
SET ( CMAKE_CXX_FLAGS_RELEASE "-O2 -std=gnu++17" )
SET ( CMAKE_EXE_LINKER_FLAGS_RELEASE "" )

SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE} )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )

if(LIBSRC_FILES)
  SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
  ADD_LIBRARY( ${CMAKE_PROJECT_NAME} SHARED ${LIBSRC_FILES} )
  TARGET_INCLUDE_DIRECTORIES (${CMAKE_PROJECT_NAME} PRIVATE ${INCLUDE_DIR} )
  TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} Threads::Threads ${LIBRARY_LISTS} )
  if (DEFINED DEPENDENCY_LIST)
    ADD_DEPENDENCIES(${CMAKE_PROJECT_NAME} ${DEPENDENCY_LIST})
  endif()
  SET(HAS_LIB TRUE)
endif()

if(SRC_FILES)
  ADD_EXECUTABLE( ${OUTPUT_ELF} ${SRC_FILES} )
  if (DEFINED DEPENDENCY_LIST)
    ADD_DEPENDENCIES(${OUTPUT_ELF} ${DEPENDENCY_LIST})
  endif()
  TARGET_INCLUDE_DIRECTORIES (${OUTPUT_ELF} PUBLIC ${INCLUDE_DIR} )
  if(HAS_LIB)
    TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${CMAKE_PROJECT_NAME} )
  endif()
  TARGET_LINK_LIBRARIES(${OUTPUT_ELF} Threads::Threads ${LIBRARY_LISTS} )

  # deploy "resource" if the directory "resource" is exist
  if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resource")
    ADD_CUSTOM_COMMAND(TARGET ${OUTPUT_ELF} POST_BUILD
      COMMAND ${CMAKE_COMMAND} -E
      copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resource ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resource
      )
  endif()

  # deploy "lib" if the directory "lib" is exist
  if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/lib")
    ADD_CUSTOM_COMMAND(TARGET ${OUTPUT_ELF} PRE_BUILD
      COMMAND ${CMAKE_COMMAND} -E
      copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/lib ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib
      )
  endif()
endif()

if(TEST_FILES)
  SET (TEST_RUNNER test_${OUTPUT_ELF})
  ADD_EXECUTABLE( ${TEST_RUNNER} ${TEST_FILES} )
  if (DEFINED DEPENDENCY_LIST)
    ADD_DEPENDENCIES(${TEST_RUNNER} ${DEPENDENCY_LIST})
  endif()
  TARGET_INCLUDE_DIRECTORIES (${TEST_RUNNER} PUBLIC ${INCLUDE_DIR} )
  TARGET_LINK_LIBRARIES(${TEST_RUNNER}
                         Threads::Threads
                         gtest
                         ${LIBRARY_LISTS}
                         )
  if(HAS_LIB)
    TARGET_LINK_LIBRARIES(${TEST_RUNNER} ${CMAKE_PROJECT_NAME} )
  endif()
endif()
